<resources>
    <string name="app_name">ShoppingApp_1</string>
    <string name="title_activity_homepage">HomepageActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_showsubcategory">ShowsubcategoryActivity</string>
    <string name="title_activity_product_list">ProductListActivity</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="delivery_address">Delivery Address</string>
    <string name="billing_address">Billing Address</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_in">sign in</string>
    <string name="login_password">Password</string>
    <string name="login_mobile">Mobile</string>
    <string name="need_an_account">need an account?</string>
    <string name="total">Total</string>
    <string name="check_out">Check out</string>
    <string name="order_placed">order placed</string>
    <string name="your_order_is_placed">Your Order is Placed!</string>
    <string name="order_information">Order Information:</string>
    <string name="signin">Sign In</string>
    <string name="first_name">  First Name</string>
    <string name="last_name">  Last Name</string>
    <string name="address">  Address</string>
    <string name="emailsignup">  Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">  Password</string>
    <string name="mobilesignup">  Mobile</string>
    <string name="cantbeempty">Can\'t be empty!</string>
    <string name="invalidphone">It\'s not a valid phone number!</string>
    <string name="invalidemail">It\'s not a valid email!</string>
    <string name="createanaccount">Create an Account</string>
    <string name="update_profile">Update Profile</string>
    <string name="my_order">My Order</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="wish_list">Wish List</string>
    <string name="log_out">Log Out</string>
    <string name="totalamount">Total: $</string>
    <string name="shoppingcart">Shopping Cart</string>
    <string name="updateprofile">Update</string>
    <string name="go_back">Go back</string>
</resources>
