<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">





    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"

            android:icon="@drawable/ic_assignment_ind_black_24dp"
            android:title="@string/update_profile" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_archive_black_24dp"
            android:title="@string/my_order" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_shopping_cart_black_24dp"
            android:title="@string/shopping_cart" />
        <item
        android:id="@+id/nav_gl"
        android:icon="@drawable/ic_card_giftcard_black_24dp"
        android:title="@string/wish_list" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/log_out" />
    </group>



</menu>
