<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jinliyu.shoppingapp_1.activity.UpdateProfileActivity"
    android:orientation="vertical">


    <!--<TextView-->
        <!--android:id="@+id/textView"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginBottom="40dp"-->
        <!--android:layout_marginStart="3dp"-->
        <!--android:layout_marginTop="31dp"-->
        <!--android:fontFamily="monospace"-->
        <!--android:text="     Update your Profile"-->
        <!--android:layout_marginLeft="50dp"-->
        <!--android:textStyle="bold"-->
        <!--android:textSize="20dp"-->
        <!--app:layout_constraintBottom_toTopOf="@+id/firstnameTxt"-->
        <!--app:layout_constraintStart_toStartOf="@+id/firstnameTxt"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

    <EditText
        android:id="@+id/firstnameTxt"
        android:layout_width="253dp"
        android:layout_height="45dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="70dp"
        android:background="@drawable/edittxt_corner"
        android:ems="10"
        android:hint="@string/first_name"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/lastnameTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/lastnameTxt"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="70dp"
        android:background="@drawable/edittxt_corner"
        android:ems="10"
        android:hint="@string/last_name"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/emailTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstnameTxt" />


    <EditText
        android:id="@+id/addressTxt"
        android:layout_width="254dp"
        android:layout_height="46dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="70dp"
        android:background="@drawable/edittxt_corner"
        android:ems="10"
        android:hint="@string/address"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/passwordTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mobileTxt" />

    <EditText
        android:id="@+id/mobileTxt"
        android:layout_width="252dp"
        android:layout_height="46dp"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="70dp"
        android:background="@drawable/edittxt_corner"
        android:ems="10"
        android:hint="@string/mobile"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/addressTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailTxt" />

    <EditText
        android:id="@+id/emailTxt"
        android:layout_width="253dp"
        android:layout_height="46dp"
        android:layout_marginBottom="50dp"
        android:layout_marginLeft="70dp"
        android:background="@drawable/edittxt_corner"
        android:ems="10"
        android:hint="@string/email"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/mobileTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastnameTxt" />

    <Button
        android:id="@+id/button"
        android:layout_width="287dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="60dp"
        android:background="@drawable/corners"
        android:text="@string/updateprofile"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTxt" />


</LinearLayout>
