<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jinliyu.shoppingapp_1.activity.BillingDetailActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="240dp"
        android:layout_height="45dp"
        android:layout_marginBottom="21dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/edittxt_corner"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="243dp"
        android:layout_height="48dp"
        android:layout_marginBottom="21dp"
        android:background="@drawable/edittxt_corner"
        android:ems="10"
        android:hint="@string/delivery_address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText4"
        android:layout_width="248dp"
        android:layout_height="46dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/edittxt_corner"
        android:ems="10"
        android:hint="@string/billing_address"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText5"
        app:layout_constraintEnd_toEndOf="@+id/editText6"
        app:layout_constraintStart_toStartOf="@+id/editText5"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="247dp"
        android:layout_height="43dp"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="71dp"
        android:layout_marginStart="71dp"
        android:background="@drawable/edittxt_corner"
        android:ems="10"
        android:hint="@string/mobile"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/editText6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText4" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="247dp"
        android:layout_height="43dp"
        android:layout_marginBottom="43dp"
        android:layout_marginEnd="70dp"
        android:layout_marginStart="70dp"
        android:background="@drawable/edittxt_corner"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="65dp"
        android:layout_marginStart="65dp"
        android:text="Confirm"
        android:textColor="@color/white"
        android:background="@drawable/corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText6" />
</android.support.constraint.ConstraintLayout>
