<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jinliyu.shoppingapp_1.activity.AfterPaymentActivity"
    tools:layout_editor_absoluteY="81dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_order_is_placed"
        android:layout_marginLeft="30dp"
        android:textSize="30dp"
        android:textColor="#000"
        android:layout_marginTop="30dp"
        tools:layout_editor_absoluteX="53dp"
        tools:layout_editor_absoluteY="154dp" />


    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="45dp"

        >

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="280dp"
            android:layout_marginTop="0dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:text="@string/order_information"
                android:textSize="20dp"
                tools:layout_editor_absoluteX="53dp"
                tools:layout_editor_absoluteY="154dp" />

            <TextView
                android:id="@+id/tvname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvmobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvaddress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tvamount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"
                android:textSize="20dp" />
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <Button
        android:layout_marginTop="40dp"
        android:layout_marginLeft="100dp"
        android:id="@+id/gobackbtn"
        android:layout_width="177dp"
        android:layout_height="55dp"
        android:background="@drawable/orangebtn"
        android:text="@string/go_back"
        tools:layout_editor_absoluteX="118dp"
        tools:layout_editor_absoluteY="339dp" />


</LinearLayout>
